tests/NormalTests/paczka1/fuzzy1/10505989.err
Error in line 2: A3 S980 7,1
Error in line 1: v1Rf A824 89,1
Error in line 7: A3 A3 30,6
Error in line 6: jRNxWcCW S980 35,3
Error in line 12: A3 A3 45,6
Error in line 3: v1Rf A3 3,7
Error in line 18: A3 A3 46,0
Error in line 13: v1Rf A824 26,0
Error in line 28: A3 A3 35,9
Error in line 25: N5z4 A824 85,6
